--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pull-stream": "^3.6.9",
     "pull-ws": "^3.3.1",
     "request-promise-native": "^1.0.5",
-    "scuttlebot": "~11.3.0",
+    "scuttlebot": "github:jfr3000/scuttlebot",
     "slugify": "^1.3.2",
     "ssb-client": "^4.6.0",
     "ssb-config": "^2.3.4",
