--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "slugify": "^1.3.2",
     "ssb-client": "^4.6.0",
     "ssb-config": "^2.3.4",
-    "ssb-friends": "^3.1.5"
+    "ssb-friends": "^3.1.5",
+    "ssb-markdown": "^4.0.0"
   },
   "devDependencies": {
     "electron": "^3.0.2",
