--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "friendly-time": "^1.1.1",
     "hyperscript-helpers": "^3.0.3",
     "mutant": "^3.22.1",
     "pull-stream": "^3.6.9",
