--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "friendly-time": "^1.1.1",
     "hyperscript-helpers": "^3.0.3",
     "mutant": "^3.22.1",
+    "pell": "^1.0.6",
     "pull-stream": "^3.6.9",
     "pull-ws": "^3.3.1",
     "request-promise-native": "^1.0.5",
     "scuttlebot": "github:jfr3000/scuttlebot",
+    "showdown": "^1.9.0",
     "slugify": "^1.3.2",
     "ssb-client": "^4.6.0",
     "ssb-config": "^2.3.4",
     "ssb-friends": "^3.1.5",
-    "ssb-markdown": "^4.0.0"
+    "ssb-markdown": "^4.0.0",
+    "turndown": "^5.0.1"
   },
   "devDependencies": {
     "electron": "^3.0.2",
