--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pull-stream": "^3.6.9",
     "pull-ws": "^3.3.1",
     "request-promise-native": "^1.0.5",
+    "rimraf": "^2.6.3",
     "scuttlebot": "github:jfr3000/scuttlebot",
     "showdown": "^1.9.0",
     "slugify": "^1.3.2",
