--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "braces": "^3.0.2",
     "friendly-time": "^1.1.1",
     "hyperscript-helpers": "^3.0.3",
     "mutant": "^3.23.0",
@@ -26,7 +27,8 @@
     "ssb-friends": "^3.1.13",
     "ssb-markdown": "^4.1.1",
     "ssb-pub-wizard": "^1.0.1",
-    "turndown": "^5.0.3"
+    "turndown": "^5.0.3",
+    "ws": "^7.0.0"
   },
   "devDependencies": {
     "electron": "^3.1.11",
